--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "uuidv4": "^6.2.6"
   },
   "devDependencies": {
     "jest": "^25.2.6",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2"
-  }
+  },
+  "repository": "https://github.com/felipetanso/challenge-nodejs-concepts.git",
+  "author": "Felipe Ribeiro Tanso <felipetanso@gmail.com>"
 }
